# nanokube

./: .gitignore  NOTICE  README.md  Tiltfile  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci.yaml
.superpowers/sdd/: task-14-report.md  task-18-report.md  task-19-report.md  task-21-report.md
agent/: Cargo.toml  build.rs
agent/src/: apply_once.rs  desiredpb.rs  lib.rs  main.rs  ops.rs  pipeline.rs  server.rs
cmd/nanokube/: addnode.go  boot.go  cli_test.go  config.go  healthcheck.go  helpers_test.go  init.go  kubeconfig.go  main.go  reset.go  root.go  token.go
cmd/nanokube-operator/: Dockerfile  deploy.yaml  main.go
contract/: README.md  desired.proto
contract/desiredpb/: agent_test.go  desired.pb.go  desired_grpc.pb.go  desired_test.go  doc.go
contract/fixtures/: doc.go  fixtures_test.go
internal/addnode/: addnode.go  addnode_test.go
internal/atomic/: swap.go  swap_test.go
internal/backup/: backup.go  backup_test.go  preflight.go  workspace.go
internal/boot/: boot.go  boot_test.go
internal/bootstraptoken/: create.go  create_test.go
internal/certs/: expiry.go  expiry_test.go  init_certs.go  init_certs_test.go  preflight.go  rotation_test.go  signers.go  signers_test.go  test_helpers_test.go  types.go  types_test.go
internal/config/: load.go  load_test.go
internal/ddi/: ddi.go  ddi_test.go
internal/healthcheck/: apiserver.go  apiserver_test.go  cluster.go  cluster_test.go  doc.go  fake_test.go  preflight.go  preflight_test.go
internal/hosts/: hosts.go  hosts_test.go
internal/initialize/: admin_rbac.go  initialize.go  (+1 more)
(+97 files in other folders)
