[package]
name = "nanokube-agent"
version = "0.1.0"
edition = "2024"
description = "nanokube node agent: applies desired documents (confext DDI + bootc stage)"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
