[package]
name = "nanokube-agent"
version = "0.1.0"
edition = "2024"
description = "nanokube node agent: applies desired documents (confext DDI + bootc stage)"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
prost = "0.14.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
tonic-prost-build = "0.14.6"
